sections FPOO; HARE e LIMA finalizadas

--- a/index.html
+++ b/index.html
@@ -49,6 +49,35 @@
 
         <div class="fpoo" id="fpoo">
             <h1>PROGRAMAÇÃO ORIENTADA A OBJETO:</h1>
+
+            <div class="fpooTxt">
+                <img src="images/fpoo/Java_mascot.png">
+                <p>O Java é uma linguagem de programação orientada a objetos e é uma das linguagens mais utilizadas pelas empresas na atualidade no desenvolvimento de aplicações WEB e Mobile. O Java foi criado em 1995 na empresa Sun Microsystem por uma equipe chefiada por James Gosling, conhecido como o pai do Java. Em 2008, o Java foi adquirido pela Oracle e vem crescendo bastante desde então no mercado de tecnologia.</p>
+            </div>
+
+            <div class="fpooBottom">
+
+                <div class="fpooTxt2">
+                    <p>Atualemnte é a segunda linguagem de programação mais popular do mundo, apenas atrás de C, e à frente de C++ e Objective C. o download e atualização da IDEA são gratuitos. Requisitos básicos: Windows XP ou posterior, Mac OS X 10.7.3 ou posterior, o Java também trabalha/roda na maioria dos sistemas Linux.</p>
+                    <h3>Principais Características do Java</h3>
+                    <ul class="javaCarac">
+                        <li>Orientada a Objetos;</li>
+                        <li>Independente de plataforma;</li>
+                        <li>Compilada;</li>
+                        <li>Interpretada;</li>
+                        <li>JDK (Java Development Kit);</li>
+                        <li>JRE  (Java Runtime Environment).</li>
+                    </ul>
+                </div>
+
+                <div class="fpooProjeto">
+                    <h3>PROJETO FINAL:</h3>
+                    <a href="">
+                        <img src="images/fpoo/fpooProjeto.png">
+                    </a>
+                    <p>Programa Estacionamento</p>
+                </div>
+            </div>
         </div>
 
 
@@ -60,20 +89,26 @@
             <div class="videosSop">
                 
                 <div class="videoSop1">
-                    <video src="#" width="300" controls></video>
-                    <h2>Instalando o Windows XP</h2>
+                    <div class="video">
+                        <h2>Instalando o Windows XP</h2>
+                        <video src="#" width="350" controls></video>
+                    </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at pellentesque ligula. Morbi sit amet purus dui. Integer varius efficitur felis quis varius. Donec tellus ipsum, egestas a tempor non, accumsan in risus. Quisque ullamcorper nulla in sollicitudin lacinia.</p>
                 </div>
 
                 <div class="videoSop2">
-                    <video src="#" width="300" controls></video>
-                    <h2>Alterando o IP do Windows 10</h2>
+                    <div class="video">
+                        <h2>Alterando o IP do Windows 10</h2>
+                        <video src="#" width="350" controls></video>
+                    </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at pellentesque ligula. Morbi sit amet purus dui. Integer varius efficitur felis quis varius. Donec tellus ipsum, egestas a tempor non, accumsan in risus. Quisque ullamcorper nulla in sollicitudin lacinia.</p>
                 </div>
 
                 <div class="videoSop3">
-                    <video src="#" width="300" controls></video>
-                    <h2>Dual Boot Ubuntu e XP</h2>
+                    <div class="video">
+                        <h2>Dual Boot Ubuntu e XP</h2>
+                        <video src="#" width="350" controls></video>
+                    </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at pellentesque ligula. Morbi sit amet purus dui. Integer varius efficitur felis quis varius. Donec tellus ipsum, egestas a tempor non, accumsan in risus. Quisque ullamcorper nulla in sollicitudin lacinia.</p>
                 </div>
 
@@ -216,13 +251,20 @@
                 <div class="limaProjeto">
 
                     <div class="limaProjeto1">
+                        <a href="https://mateuz-dev.github.io/galeriaNBA/" target="blank">
+                            <img src="images/lima/Site - Galeria NBA.png">
+                        </a>
+                        <p>Site Galeria NBA</p>
+                    </div>
+
+                    <div class="limaProjeto2">
                         <a href="https://mateuz-dev.github.io/cidade_invisivel/" target="blank">
                             <img src="images/lima/Site - Cidade Invisível.png">
                         </a>
                         <p>Site Cidade Invisível</p>
                     </div>
 
-                    <div class="limaProjeto2">
+                    <div class="limaProjeto3">
                         <a href="https://mateuz-dev.github.io/site-hamburgueria/" target="blank">
                             <img src="images/lima/Site - Hamburgueria.png">
                         </a>
