--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/logoSenai.ico" type="image/x-icon">
     <title>Projeto Integrado</title>
 </head>
 
@@ -91,25 +90,25 @@
                 <div class="videoSop1">
                     <div class="video">
                         <h2>Instalando o Windows XP</h2>
-                        <video src="#" width="350" controls></video>
+                        <video src="videos/Instalando o Windows XP.mp4" width="350" controls></video>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at pellentesque ligula. Morbi sit amet purus dui. Integer varius efficitur felis quis varius. Donec tellus ipsum, egestas a tempor non, accumsan in risus. Quisque ullamcorper nulla in sollicitudin lacinia.</p>
+                    <p>O Windows XP é um sistema operacional da Microsoft para computadores, desktop, notebooks, tablets e media centers. Lançado em 2001, o sistema foi muito bem recebido pelos usuários e continua sendo muito utilizado, mesmo após o encerramento do suporte em abril de 2014.</p>
                 </div>
 
                 <div class="videoSop2">
                     <div class="video">
                         <h2>Alterando o IP do Windows 10</h2>
-                        <video src="#" width="350" controls></video>
+                        <video src="videos/Como alterar o ip do Windows 10.mp4" width="350" controls>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at pellentesque ligula. Morbi sit amet purus dui. Integer varius efficitur felis quis varius. Donec tellus ipsum, egestas a tempor non, accumsan in risus. Quisque ullamcorper nulla in sollicitudin lacinia.</p>
+                    <p>Endereço IP é um endereço exclusivo que identifica um dispositivo na Internet ou em uma rede local. IP vem do inglês "Internet Protocol" (protocolo de rede) que consiste em um conjunto de regras que regem o formato de dados enviados pela Internet ou por uma rede local..</p>
                 </div>
 
                 <div class="videoSop3">
                     <div class="video">
                         <h2>Dual Boot Ubuntu e XP</h2>
-                        <video src="#" width="350" controls></video>
+                        <video src="videos/Dual Boot - Windows XP e Ubuntu.mp4" width="350" controls></video>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at pellentesque ligula. Morbi sit amet purus dui. Integer varius efficitur felis quis varius. Donec tellus ipsum, egestas a tempor non, accumsan in risus. Quisque ullamcorper nulla in sollicitudin lacinia.</p>
+                    <p>Embora a maioria dos PCs tenha um único sistema operacional (SO) integrado, também é possível executar dois sistemas operacionais em um computador ao mesmo tempo. Portanto, podemos chamar esse processo como inicialização dupla (Dual Boot). Ele permite que os usuários alternem entre os sistemas operacionais dependendo das tarefas e programas com os quais estão trabalhando..</p>
                 </div>
 
             </div>
