--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="videoSop2">
                     <div class="video">
                         <h2>Alterando o IP do Windows 10</h2>
-                        <video src="videos/Como alterar o ip do Windows 10.mp4" width="350" controls>
+                        <video src="videos/Como alterar o ip do Windows 10.mp4" width="350" controls></video>
                     </div>
                     <p>Endereço IP é um endereço exclusivo que identifica um dispositivo na Internet ou em uma rede local. IP vem do inglês "Internet Protocol" (protocolo de rede) que consiste em um conjunto de regras que regem o formato de dados enviados pela Internet ou por uma rede local..</p>
                 </div>
